Added a link on of the TextProj

--- a/index.html
+++ b/index.html
@@ -16,9 +16,13 @@
         <li><a href="contact.asp">Contact</a></li>
         <li><a href="about.asp">About</a></li>
       </ul> 
-      
-      <h2></h2>
 
-<img src="images/Snapchat-837325335.jpg" alt="">
+<img src="images/Snapchat-837325335.jpg" width="250" height="400" alt="my beautiful pic"style="float:right;width:200px;height:200px;">
+ 
+<h2><strong>The Following are my links</strong></h2>
+<ol>
+    <li><a href="https://github.com/lillianngoiri/testProject.git">TextProj</a></li>
+ <li><a href="https://github.com/lillianngoiri/yara-lili.git">my first web page</a></li>
+</ol>
 </body>
 </html>
