I have added a brief decription to mt first link

--- a/index.html
+++ b/index.html
@@ -21,8 +21,11 @@
  
 <h2><strong>The Following are my links</strong></h2>
 <ol>
-    <li><a href="https://github.com/lillianngoiri/testProject.git">TextProj</a></li>
- <li><a href="https://github.com/lillianngoiri/yara-lili.git">my first web page</a></li>
+    <li><a href="https://github.com/lillianngoiri/testProject.git">TestProj</a>
+    <p>This is a brief description of my <strong>TestProj.</strong> It is written in HTML, and CSS language. It's just a simple project that states that i <strong>Lilian Ngoiri</strong> is a webdeveloper and there is an image of an elephat to signify how big i am when it comes to web developing.</p></li>
+  
+    <li><a href="https://github.com/lillianngoiri/yara-lili.git">my first web page</a>
+    <p></p></li>
 </ol>
 </body>
 </html>
