--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>LILIAN NGOIRI</h1>
+    <h1> <em>LILIAN NGOIRI</em></h1>git add <div class=""></div>
 
     <ul>
         <li><a href="default.asp">Home</a></li>
@@ -17,7 +17,7 @@
         <li><a href="about.asp">About</a></li>
       </ul> 
 
-<img src="images/Snapchat-837325335.jpg" width="250" height="400" alt="my beautiful pic"style="float:right;width:200px;height:200px;">
+<img src="images/Snapchat-837325335.jpg" width="250" height="500" alt="my beautiful pic"style="float:right;width:200px;height:200px;">
  
 <h2><strong>The Following are my links</strong></h2>
      <ol>
