--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Portfolio</title>
     <link rel="stylesheet" href="style.css">
+   
 </head>
 <body>
-    <h1> <em>LILIAN NGOIRI</em></h1>git add <div class=""></div>
+        <div style="background-color:lightblue">
+    <h1> <em>LILIAN NGOIRI</em></h1>
 
     <ul>
         <li><a href="default.asp">Home</a></li>
