--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
         <div style="background-color:lightblue">
-    <h1> <em>LILIAN NGOIRI</em></h1>
+    <h1> <em><span style="color:red">LILIAN NGOIRI</span></em></h1>
 
     <ul>
         <li><a href="default.asp">Home</a></li>
