have added a color to my name using span tags command

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
    
 </head>
 <body>
-        <div style="background-color:lightblue">
+        <div style="background-color:lightblue"></div>
     <h1> <em><span style="color:red">LILIAN NGOIRI</span></em></h1>
 
     <ul>
