added a background color

--- a/index.html
+++ b/index.html
@@ -5,19 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Portfolio</title>
-    <link rel="stylesheet" href="style.css">
+    <link type="text/css" rel="stylesheet" href="css/style.css" />
    
 </head>
 <body>
-        <div style="background-color:lightblue"></div>
-    <h1> <em><span style="color:red">LILIAN NGOIRI</span></em></h1>
+        <div style="background-color:lightblue">
+        <h1><em><span style="color:red">LILIAN NGOIRI</span></em></h1>
 
-    <ul>
-        <li><a href="default.asp">Home</a></li>
-        <li><a href="news.asp">News</a></li>
-        <li><a href="contact.asp">Contact</a></li>
-        <li><a href="about.asp">About</a></li>
-      </ul> 
+        <a href="default.asp">Home</a>
+        <a href="news.asp">News</a>
+        <a href="contact.asp">Contact</a>
+        <a href="about.asp">About</a>
 
 <img src="images/Snapchat-837325335.jpg" width="250" height="500" alt="my beautiful pic"style="float:right;width:200px;height:200px;">
  
