added some font-family, font size, font style, font weight, text align and text decoration

--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
 </head>
 <body>
         <div style="background-color:lightblue">
-        <h1><em><span style="color:red">LILIAN NGOIRI</span></em></h1>
+        <h1><em><span style="color:blueviolet">LILIAN NGOIRI</span></em></h1>
 
         <a href="default.asp">Home</a>
         <a href="news.asp">News</a>
         <a href="contact.asp">Contact</a>
         <a href="about.asp">About</a>
 
-<img src="images/Snapchat-837325335.jpg" width="250" height="500" alt="my beautiful pic"style="float:right;width:200px;height:200px;">
+<img src="images/Snapchat-837325335.jpg" width="250" height="500" alt="my beautiful pic"style="float:right;width:200px;height:400px;">
  
 <h2><strong>The Following are my links</strong></h2>
      <ol>
