have aligned my image in a perfect manner.

--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
         <div style="background-color:lightblue">
         <h1><em><span style="color:blueviolet">LILIAN NGOIRI</span></em></h1>
 <h2>
-        <a href="default.asp">Home</a>
-        <a href="news.asp">News</a>
-        <a href="contact.asp">Contact</a>
-        <a href="about.asp">About</a>
+        <a href="default.asp" id="active">Home</a>
+        <a href="news.asp" class="menu-item">News</a>
+        <a href="contact.asp" class="menu-item">Contact</a>
+        <a href="about.asp" class="menu-item">About</a>
 </h2>
 
-<p>
-    <img src="images/Snapchat-837325335.jpg" width="250" height="500" alt="my beautiful pic"style="float:right;width:200px;height:300px;">
+<p style="margin-top:80px;float:right">
+    <img src="images/Snapchat-837325335.jpg" width="250" height="500" alt="my beautiful pic"style="width:200px;height:300px;">
  </p>
 
 <h3><strong>The Following are my links</strong></h3>
