added a bacground color fot the h2.

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
         <div style="background-color:lightblue">
         <h1><em><span style="color:blueviolet">LILIAN NGOIRI</span></em></h1>
 <h2>
-        <a href="default.asp" id="active">Home</a>
+        <a href="default.asp" class="menu-item">Home</a>
         <a href="news.asp" class="menu-item">News</a>
         <a href="contact.asp" class="menu-item">Contact</a>
-        <a href="about.asp" class="menu-item">About</a>
+        <a  href="about.asp" class="menu-item">About</a>
 </h2>
 
 <p style="margin-top:80px;float:right">
